(수정) HomeController 리팩토링